src/Domain/Compiler/Tests/Expression/IntegerLiteral/DecimalLiteral/__Baselines__/DecimalLiteral_S64Underflow-StashIr.error
error: Integer literal subceeds global minimum limit (s64_min).
--> main.hs:7:17
  | 
7 |         return -9223372036854775809;}}
  |                 ^^^^^^^^^^^^^^^^^^^
